* 8.0.0
- Added OpenMetrics exposition format support (#388).
- Added exemplar support for Counter and Histogram (#388).
- The ':' character is no longer allowed in metric or label names. For metric names, Prometheus standard practice is to use colon only in recording rules.
- Publish symbol packages and add Source Link support for easier debugging experience.
- Fix defect where metrics with different labels could overwrite each other in specific circumstances with multiple metric factories in use (#389).
- Ensure even harder that MetricPusher flushes the final state before stopping (#383 and #384)
- Simplify DotNetStats built-in collector code for ease of readability and more best practices (#365, #364)
- Slightly improve Counter performance under concurrent load.
- Reduce memory allocations performed during ASP.NET Core HTTP request tracking.
- By default, EventCounterAdapter will only listen to a small predefined set of general-purpose useful event sources, to minimize resource consumption in the default configuration. A custom event source filter must now be provided to enable listening for additional event sources.
- EventCounterAdapter will only refresh data every 10 seconds by default, to reduce amount of garbage generated in memory (.NET event counters are very noisy and create many temporary objects).
- Added `IManagedLifetimeMetricFactory.WithLabels()` to enable simpler label enrichment in scenarios where lifetime-managed metric instances are used.
* 7.1.0
- Added back .NET Standard 2.0 support as some customers had a hard dependency on .NET Standard 2.0 (despite not being a documented feature even earlier).
- Added (Observable)UpDownCounter support to MeterAdapter (.NET 7 specific feature).
* 7.0.0
- .NET Core specific functionality now targeting .NET 6.0 or greater (all previous versions will be end of life by December 2022).